# pt2onnx

./: .gitignore  CMakeLists.txt  onnx.cpp  pt2onnx.py  py_generater.py  py_test.py  py_train.py  readme.md
data/: data.npy
model/: adder.onnx  adder.pth
